@@ -1,5 +1,5 @@
 %global project https://github.com/arkane-systems/genie/
-%global version 1.40
+%global version 1.41
 
 # debuginfo is 'not supported' for .NET binaries
 %global debug_package %{nil}
@@ -80,8 +80,10 @@ rm -rf %{buildroot}
 %{_unitdir}/user-runtime-dir@.service.d/override.conf
 
 %changelog
-* Tue Apr 27 2021 Alistair Young <avatar@arkane-systems.net> 1.41-1
+* Thu May 06 2021 Alistair Young <avatar@arkane-systems.net> 1.41-1
 - Moved user-runtime-dir@.service override to ExecStartPost.
+- Fix virtualization detection for non-custom kernels.
+- Detect slow-start as distinct from failed-start.
 
 * Tue Apr 27 2021 Alistair Young <avatar@arkane-systems.net> 1.40-1
 - Improved Fedora packaging to eliminate manual unit enable.
